--- a/Iter_GA.ipynb
+++ b/Iter_GA.ipynb
@@ -99,7 +99,7 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -1230,12 +1230,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
     "def iterative_genetic_algorithm(supergenerations):\n",
-    "    matrix = create_matrix(20, 0.5)\n",
+    "    matrix = create_matrix(10, 0.5)\n",
     "    print(matrix)\n",
     "    print(\"Original length: \", len(''.join([str(i) for n in matrix for i in n])))\n",
     "    print(\"Original RLE length: \", len(encode(''.join([str(i) for n in matrix for i in n]))))\n",
@@ -1346,7 +1346,7 @@
     }
    ],
    "source": [
-    "iterative_genetic_algorithm(20)"
+    "iterative_genetic_algorithm(100)"
    ]
   },
   {
