--- a/Iter_GA-improvements.ipynb
+++ b/Iter_GA-improvements.ipynb
@@ -23,7 +23,7 @@
    "source": [
     "### Binary Run Length Encoding and Decoding\n",
     "\n",
-    "Assumes the first run is of the digit is 0"
+    "Assumes the first run is of the digit 0"
    ]
   },
   {
